--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -85,7 +85,6 @@
     <ClInclude Include="PlugIoLineAnimation.h" />
     <ClInclude Include="PlugIoLines.h" />
     <ClInclude Include="RenameSigGenCmd.h" />
-    <ClInclude Include="RotateSelectionCommand.h" />
     <ClInclude Include="SelSigGenClientsCmd.h" />
     <ClInclude Include="SetActiveSigGenCmd.h" />
     <ClInclude Include="AttachSigGen2LineCmd.h" />
@@ -143,6 +142,7 @@
     <ClCompile Include="NewSigGenCmd.ixx" />
     <ClCompile Include="RotateModelCommand.ixx" />
     <ClCompile Include="RotateNobCommand.ixx" />
+    <ClCompile Include="RotateSelectionCommand.ixx" />
     <ClCompile Include="RotationCommand.ixx" />
     <ClCompile Include="SelectAllCommand.ixx" />
     <ClCompile Include="SelectionCommand.ixx" />
