--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -72,9 +72,6 @@
     <ClInclude Include="SetActiveSigGenCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RenameSigGenCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SelSigGenClientsCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -216,6 +213,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AttachSigGen2SelCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RenameSigGenCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
