--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -63,9 +63,6 @@
     <ClInclude Include="PlugIoLines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AddPipe2PipeCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DeleteIoConnectorCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RenameSigGenCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AddPipe2PipeCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
