--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClInclude Include="RestrictSelectionCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AddSensorSignalCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="DiscIoConnectorCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AddPipe2PipeCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AddSensorSignalCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
