--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -614,7 +614,8 @@
     <ClCompile Include="win32_NNetAppWindow.cpp" />
     <ClCompile Include="NNetController.cpp" />
     <ClCompile Include="NNetController.ixx" />
-    <ClCompile Include="win32_NNetWindow.cpp" />
+    <ClCompile Include="Win32_NNetWindow.cpp" />
+    <ClCompile Include="Win32_NNetWindow.ixx" />
     <ClCompile Include="Win32_ParameterDlg.cpp" />
     <ClCompile Include="Win32_ParameterDlg.ixx" />
     <ClCompile Include="Win32_PerformanceWindow.cpp" />
@@ -630,7 +631,6 @@
     <ClInclude Include="NNetModelCommands.h" />
     <ClInclude Include="win32_monitorWindow.h" />
     <ClInclude Include="win32_NNetAppWindow.h" />
-    <ClInclude Include="win32_NNetWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Toolbox\Direct2D\Direct2D.vcxproj">
