--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -161,7 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_baseScale.h" />
-    <ClInclude Include="win32_graphicsWindow.h" />
     <ClInclude Include="win32_scale.h" />
     <ClInclude Include="win32_rootWindow.h" />
     <ClInclude Include="win32_textWindow.h" />
@@ -191,7 +190,8 @@
     <ClCompile Include="win32_escape.cpp" />
     <ClCompile Include="Win32_event.ixx" />
     <ClCompile Include="Win32_FatalError.ixx" />
-    <ClCompile Include="win32_graphicsWindow.cpp" />
+    <ClCompile Include="Win32_GraphicsWindow.cpp" />
+    <ClCompile Include="Win32_GraphicsWindow.ixx" />
     <ClCompile Include="Win32_HiResTimer.ixx" />
     <ClCompile Include="Win32_MessagePump.cpp" />
     <ClCompile Include="Win32_MessagePump.ixx" />
