--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -84,7 +84,6 @@
     <ClInclude Include="SetActiveSigGenCmd.h" />
     <ClInclude Include="AttachSigGen2LineCmd.h" />
     <ClInclude Include="DiscIoConnectorCmd.h" />
-    <ClInclude Include="RestrictSelectionCommand.h" />
     <ClInclude Include="SelectSubtreeCommand.h" />
     <ClInclude Include="SetHighlightedNobCmd.h" />
     <ClInclude Include="SetParameterCommand.h" />
@@ -142,6 +141,7 @@
     <ClCompile Include="NewIoLinePairCmd.ixx" />
     <ClCompile Include="NewSigGenCmd.ixx" />
     <ClCompile Include="RenameSigGenCmd.ixx" />
+    <ClCompile Include="RestrictSelectionCommand.ixx" />
     <ClCompile Include="RotateModelCommand.ixx" />
     <ClCompile Include="RotateNobCommand.ixx" />
     <ClCompile Include="RotateSelectionCommand.ixx" />
