--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -39,7 +39,7 @@
     <ClCompile Include="Win32_MiniWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="win32_NNetAppWindow.cpp">
+    <ClCompile Include="NNetAppWindow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Win32_ParameterDlg.cpp">
@@ -171,11 +171,11 @@
     <ClCompile Include="Win32_NNetWindow.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NNetAppWindow.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="win32_NNetAppWindow.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="win32_monitorWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
