--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -86,7 +86,6 @@
     <ClInclude Include="DiscIoConnectorCmd.h" />
     <ClInclude Include="SelectSubtreeCommand.h" />
     <ClInclude Include="SetHighlightedNobCmd.h" />
-    <ClInclude Include="SetParameterCommand.h" />
     <ClInclude Include="SetTargetNobCmd.h" />
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +150,7 @@
     <ClCompile Include="SelectNobCommand.ixx" />
     <ClCompile Include="SelectNobsInRectCommand.ixx" />
     <ClCompile Include="SetNobCommand.ixx" />
+    <ClCompile Include="SetParameterCommand.ixx" />
     <ClCompile Include="SetSigGenStaticDataCmd.ixx" />
     <ClCompile Include="SigGenCommand.ixx" />
     <ClCompile Include="SingleNobAnimation.ixx" />
