Win32_RootWindow.ixx

--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -161,7 +161,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="win32_scale.h" />
-    <ClInclude Include="win32_rootWindow.h" />
     <ClInclude Include="win32_textWindow.h" />
     <ClInclude Include="win32_util_resource.h" />
   </ItemGroup>
@@ -196,6 +195,7 @@
     <ClCompile Include="Win32_MessagePump.cpp" />
     <ClCompile Include="Win32_MessagePump.ixx" />
     <ClCompile Include="Win32_PixelTypes.ixx" />
+    <ClCompile Include="Win32_RootWindow.ixx" />
     <ClCompile Include="Win32_Script.ixx" />
     <ClCompile Include="Win32_Sound.ixx" />
     <ClCompile Include="Win32_StdDialogBox.cpp" />
@@ -203,7 +203,7 @@
     <ClCompile Include="Win32_Stopwatch.ixx" />
     <ClCompile Include="win32_textBuffer.cpp" />
     <ClCompile Include="win32_HiResTimer.cpp" />
-    <ClCompile Include="win32_rootWindow.cpp" />
+    <ClCompile Include="Win32_RootWindow.cpp" />
     <ClCompile Include="Win32_Script.cpp" />
     <ClCompile Include="Win32_Stopwatch.cpp" />
     <ClCompile Include="Win32_TextBuffer.ixx" />
