--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="PlugIoLines.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DeleteIoConnectorCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SetActiveSigGenCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SetParameterCommand.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DeleteIoConnectorCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
