--- a/NNet/ModelIO/ModelIO.vcxproj
+++ b/NNet/ModelIO/ModelIO.vcxproj
@@ -78,11 +78,11 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\..\Toolbox\runtimeCPP;$(SolutionDir)\..\Toolbox\Utilities;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)\NNetModel;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\..\Toolbox\runtimeCPP;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)\NNetModel;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)\..\Toolbox\runtimeCPP;$(SolutionDir)\..\Toolbox\Utilities;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)\NNetModel;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\..\Toolbox\runtimeCPP;$(SolutionDir)\..\Toolbox\Win32_utilities;$(SolutionDir)\NNetModel;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
