--- a/Toolbox/WinBasics/WinBasics.vcxproj
+++ b/Toolbox/WinBasics/WinBasics.vcxproj
@@ -80,10 +80,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\ToolBox\runtimeCPP;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)..\ToolBox\Utilities;$(SolutionDir)..\ToolBox\runtimeCPP;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)..\ToolBox\runtimeCPP;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
