--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -185,8 +185,8 @@
     <ClCompile Include="Win32_Controls.ixx" />
     <ClCompile Include="Win32_EditLineBox.cpp" />
     <ClCompile Include="Win32_EditLineBox.ixx" />
-    <ClCompile Include="win32_escape.cpp" />
-    <ClCompile Include="Win32_event.ixx" />
+    <ClCompile Include="Win32_Escape.cpp" />
+    <ClCompile Include="Win32_Event.ixx" />
     <ClCompile Include="Win32_FatalError.ixx" />
     <ClCompile Include="Win32_GraphicsWindow.cpp" />
     <ClCompile Include="Win32_GraphicsWindow.ixx" />
