--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -583,6 +583,7 @@
     <ClCompile Include="NNetAppWindow.ixx" />
     <ClCompile Include="NNetInputOutputUI.ixx" />
     <ClCompile Include="NNetModelCommands.cpp" />
+    <ClCompile Include="NNetModelCommands.ixx" />
     <ClCompile Include="NNetWrappers.cpp" />
     <ClCompile Include="NNetWrappers.ixx" />
     <ClCompile Include="Preferences.cpp" />
@@ -629,7 +630,6 @@
     <ClCompile Include="Win32_Status.ixx" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="NNetModelCommands.h" />
     <ClInclude Include="win32_monitorWindow.h" />
   </ItemGroup>
   <ItemGroup>
