--- a/Toolbox/Win32_utilities/Win32_utilities.vcxproj
+++ b/Toolbox/Win32_utilities/Win32_utilities.vcxproj
@@ -209,7 +209,7 @@
     <ClCompile Include="Win32_TextBuffer.ixx" />
     <ClCompile Include="win32_textWindow.cpp" />
     <ClCompile Include="Win32_TextWindow.ixx" />
-    <ClCompile Include="win32_thread.cpp" />
+    <ClCompile Include="Win32_Thread.cpp" />
     <ClCompile Include="Win32_Thread.ixx" />
     <ClCompile Include="Win32_Tooltip.cpp" />
     <ClCompile Include="Win32_Tooltip.ixx" />
