--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClInclude Include="AttachSigGen2LineCmd.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AttachSIgGen2ConnCmd.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SetHighlightedNobCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AttachSigGen2ConnCmd.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
