--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="SelectSubtreeCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Connect2BaseKnotCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="CommandStack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -219,6 +216,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AttachSigGen2ConnCmd.ixx">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Connect2BaseKnotCommand.ixx">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
